--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-# kunchalavikram1427.github.io
-My Webpage
+<!doctype html>
+<html>
+  <head>
+    <title>Welcome to my webpage!</title>
+  </head>
+  <body>
+    <p>PAGE UNDER CONSTRUCTION. CHECK BACK LATER</p>
+  </body>
+</html>
